<?xml version="1.0" encoding="utf-8"?>
<combruce_willis.github.xkcd.Model.HackyViewPager xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />