<?xml version="1.0" encoding="utf-8"?>
<com.github.chrisbanes.photoview.PhotoView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/full_screen_comic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/comic_description"
    android:padding="@dimen/full_screen_comic_padding"
    android:scaleType="fitCenter" />