<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view"
    android:name="combruce_willis.github.xkcd.ComicFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="vertical"
    app:layoutManager="GridLayoutManager"
    app:spanCount="@integer/grid_span_count"
    tools:context=".Fragment.ComicListFragment"
    tools:listitem="@layout/fragment_comic_item" />